2014-06-10  Dirk Eddelbuettel  <edd@debian.org>

	* R/pushes.R: Rewritten in terms of new argument 'recipients' with
	the default being sent to all devices; old argument 'deviceind' now
	deprecated.

	* R/init.R: New internal helper function .getNames()
	* R/init.R: The .getDefaultDevice() now defaults to 'zero' implying
	all devices should be used.

2014-06-07  Dirk Eddelbuettel  <edd@debian.org>

	* R/devices.R: pgGetDevices() converted to an S3 object with proper
	print and summary methods for the returned class 'pbDevices'

2014-06-06  Dirk Eddelbuettel  <edd@debian.org>

	* R/init.R: Applied pull request #3 by Bill Evans
	* R/push.R: Ditto

	* R/init.R: Minor tweak using 'defaultdevice'
	* R/push.R: Ditto

2014-06-05  Dirk Eddelbuettel  <edd@debian.org>

	* R/init.R: Fixed two more references to pushbutton which should of
	course have been pushbullet
	* R/pushes.R: And another one here

2014-06-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.0.2

	* R/init.R: Detect curl binary in PATH at startup
	* R/pushes.R: Use curl binary identified at startup
	* R/devices.R: Ditto

	* .Rbuildignore: Add attic/ directory with file configure and
	configure.ac which is no longer needed at init.R checks for curl

	* R/init.R: Package environment is now .pkgenv
	* tests/simpleTests.R: Ditto

2014-05-27  Dirk Eddelbuettel  <edd@debian.org>

	* R/pushes.R (pbPost): Added new optional argument 'debug', and minor
	refactoring in pbPost() making url string a common variable

2014-05-25  Dirk Eddelbuettel  <edd@debian.org>

	* configure.ac: Added with simple test for curl
	* configure: Idem

	* tests/simpleTests.R: Added simple test script

	* R/init.R: Improved init. with new helper functions

2014-05-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Initial commit as version 0.0.1

	* .travis.yml: Added Travis support